- More responsive on mobile. Still a few bugs to fix on mobile

--- a/css/components/feature-list/feature-list-small.css
+++ b/css/components/feature-list/feature-list-small.css
@@ -5,7 +5,8 @@
   flex-direction: column;
   align-content: center;
   justify-items: center;
-  width: 100%; }
+  width: 100%;
+  padding: 10px; }
   .feature-list li {
     min-height: 60px;
     text-decoration: none;
