--- a/scss/components/content-block/content-block-small.scss
+++ b/scss/components/content-block/content-block-small.scss
@@ -3,12 +3,12 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width:100%;
     text-align: center;
-
-
+    padding: 0 10px;
+    
     .content-block--heading {
         font-size: 30px;
+      
     }
 
     .content-block--dual-cta {
