--- a/scss/components/hero/hero-small.scss
+++ b/scss/components/hero/hero-small.scss
@@ -4,20 +4,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
    
     img {
-        width: 80%;
+        width: 90%;
     }
 
     .hero-content {
         text-align: center;
-        width: 100%;
+        padding: 0px 10px;
     }
 
     .circle--container{
        position: absolute;
-       top: 30%;
+       top: 15%;
        right: -160px;
        border-radius: 100px;
        // right: 100px;
@@ -28,5 +27,8 @@
        
     }
 
+    .btn{
+        padding: 10px;
+    }
    
 }
