--- a/scss/components/img-content-block/img-content-block-small.scss
+++ b/scss/components/img-content-block/img-content-block-small.scss
@@ -5,7 +5,8 @@
         align-items: center;
         justify-content: center;
         width: 100vw;
-        flex: 0 0 100%
+        flex: 0 0 100%;
+        margin-top: 50px;
         img {
             width: 100vw;
             min-width: 100vw;
